<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_gray"
    tools:context=".activity.ShowLessonActivity">

    <TextView
        android:id="@+id/textViewLessonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/test_lesson"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <ScrollView
        android:id="@+id/scrollViewLesson"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewLessonContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/lesson_text_lesson"
            android:padding="16dp"/>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#404040"
            android:text="@string/previous_lesson" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#64B349"
            android:text="@string/next_lesson" />
    </LinearLayout>

</LinearLayout>
